--- a/index.html
+++ b/index.html
@@ -172,17 +172,13 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">2017 - Present</h6>
-                            <P>B.E Computer Engineering</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error corrupti recusandae obcaecati odit repellat ducimus cum, minus tempora aperiam at.</P>
+                            <h6 class="title text-danger">2016 - 2018 | Cesca</h6>
+                            <P>Técnico en Computación e Informática</P>
+                            <P class="subtitle">.</P>
                             <hr>
-                            <h6 class="title text-danger">2016 - 2017</h6>
-                            <P>Diploma in Computer Engineering</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, id officiis quas placeat quia voluptas dolorum rem animi nostrum quae.aliquid repudiandae saepe!.</P>
-                            <hr>
-                            <h6 class="title text-danger">2015 - 2016</h6>
-                            <P>High School Degree</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <h6 class="title text-danger">2020 - 2024</h6>
+                            <P>SDC LEARNING</P>
+                            <P class="subtitle">Certifiación Azure.</P>
                             
                         </div>
                     </div>
@@ -623,7 +619,7 @@
             <div class="row">
                 <div class="blog-card">
                     <div class="img">
-                        <img height="600px" width="450px" src="https://scontent.flim9-1.fna.fbcdn.net/v/t39.30808-6/342493313_962820644743957_4531066321413321241_n.jpg?stp=dst-jpg_p526x296&_nc_cat=102&ccb=1-7&_nc_sid=730e14&_nc_eui2=AeGlazKgB-B7abAVfMq1eKgHp15Z6xkKPOKnXlnrGQo84r9QrAwV8Lz2WTsN-gAWIxtKg5LNNehwf8swZr6hZ92I&_nc_ohc=quOxwfIqek8AX8qToZ6&_nc_ht=scontent.flim9-1.fna&oh=00_AfCCe__F-BmgOWSQOn5Y942ZkfmifWny97dTkdoGTPtRUg&oe=6449D0FE" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img height="600px" width="550px" src="assets/imgs/modelado.jpg">
                     </div>
                     <div class="content-holder">
                         <h6 class="title">MODELAMIENTO DE DATOS CON SQL SERVER</h6>
@@ -649,7 +645,7 @@
 
                 <div class="blog-card">
                     <div class="img">
-                        <img height="600px" width="450px" src="https://scontent.flim9-1.fna.fbcdn.net/v/t39.30808-6/342194979_237430412275647_2415197332029982514_n.jpg?stp=dst-jpg_p526x296&_nc_cat=102&ccb=1-7&_nc_sid=730e14&_nc_eui2=AeH2xUlGBlA_f7Z82F-lSI8LLAxel6Ll4zksDF6XouXjOdWpCQCWasc6svUPh5Esv6gqno_yWSoPEYeZGqln5sxi&_nc_ohc=JZBJrghSp94AX9vUFGG&_nc_ht=scontent.flim9-1.fna&oh=00_AfAEWzun_Ywd0_TIGgOoM9teGE5igFVLSj2ddLDwdDqb1Q&oe=6449E2D7" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img height="600px" width="550px" src="assets/imgs/excel.jpg"">
                     </div>
                     <div class="content-holder">
                         <h6 class="title">CÓMO USAR EXCEL PARA DATA  ANALYTICS </h6>
@@ -763,7 +759,7 @@ background: #ffffff;
 color: white;
 }
     </style>
-    <a class="fab fa-whatsapp" href="https://wa.me/51997852483/?text=Hola%20deseo%20 más información" target="_blank">
+    <a class="fab fa-whatsapp" href="https://wa.me/51991945300/?text=Hola%20deseo%20 más información" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/WhatsApp_icon.png/640px-WhatsApp_icon.png" width="50" height="50">
         </a>
     <footer class="footer py-3">
